--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   go_router: ^15.1.3
   flutter_screenutil: ^5.9.3
   google_sign_in: ^6.3.0
+  firebase_messaging: ^15.2.7
+  firebase_analytics: ^11.5.0
+  flutter_local_notifications: ^19.2.1
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
