Working On Adding Notification Topic's And GetIt And Some Enhancement

--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,35 +2,47 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>172751732134-k2afqa9k0nfnuiglqa3q8n6e3pddpsba.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.172751732134-k2afqa9k0nfnuiglqa3q8n6e3pddpsba</string>
-	<key>ANDROID_CLIENT_ID</key>
-	<string>172751732134-36c4hrpctvr067ua3vco8kebhljgapf4.apps.googleusercontent.com</string>
-	<key>API_KEY</key>
-	<string>AIzaSyDaoW61ishVw-lXxRj5gQohcdBdjP8OJyM</string>
-	<key>GCM_SENDER_ID</key>
-	<string>172751732134</string>
-	<key>PLIST_VERSION</key>
-	<string>1</string>
-	<key>BUNDLE_ID</key>
-	<string>com.example.firebaseAuthCase</string>
-	<key>PROJECT_ID</key>
-	<string>fir-auth-47ebf</string>
-	<key>STORAGE_BUCKET</key>
-	<string>fir-auth-47ebf.firebasestorage.app</string>
-	<key>IS_ADS_ENABLED</key>
-	<false></false>
-	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
-	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
-	<key>IS_GCM_ENABLED</key>
-	<true></true>
-	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
-	<key>GOOGLE_APP_ID</key>
-	<string>1:172751732134:ios:297aa6deb4ca42bfc32367</string>
+  <key>CFBundleURLTypes</key>
+  <array>
+    <dict>
+      <key>CFBundleTypeRole</key>
+      <string>Editor</string>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>com.googleusercontent.apps.172751732134-k2afqa9k0nfnuiglqa3q8n6e3pddpsba</string>
+      </array>
+    </dict>
+  </array>
+
+  <key>CLIENT_ID</key>
+  <string>172751732134-k2afqa9k0nfnuiglqa3q8n6e3pddpsba.apps.googleusercontent.com</string>
+  <key>REVERSED_CLIENT_ID</key>
+  <string>com.googleusercontent.apps.172751732134-k2afqa9k0nfnuiglqa3q8n6e3pddpsba</string>
+  <key>ANDROID_CLIENT_ID</key>
+  <string>172751732134-36c4hrpctvr067ua3vco8kebhljgapf4.apps.googleusercontent.com</string>
+  <key>API_KEY</key>
+  <string>AIzaSyDaoW61ishVw-lXxRj5gQohcdBdjP8OJyM</string>
+  <key>GCM_SENDER_ID</key>
+  <string>172751732134</string>
+  <key>PLIST_VERSION</key>
+  <string>1</string>
+  <key>BUNDLE_ID</key>
+  <string>com.example.firebaseAuthCase</string>
+  <key>PROJECT_ID</key>
+  <string>fir-auth-47ebf</string>
+  <key>STORAGE_BUCKET</key>
+  <string>fir-auth-47ebf.firebasestorage.app</string>
+  <key>IS_ADS_ENABLED</key>
+  <false/>
+  <key>IS_ANALYTICS_ENABLED</key>
+  <false/>
+  <key>IS_APPINVITE_ENABLED</key>
+  <true/>
+  <key>IS_GCM_ENABLED</key>
+  <true/>
+  <key>IS_SIGNIN_ENABLED</key>
+  <true/>
+  <key>GOOGLE_APP_ID</key>
+  <string>1:172751732134:ios:297aa6deb4ca42bfc32367</string>
 </dict>
 </plist>
