--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_analytics: ^11.5.0
   flutter_local_notifications: ^19.2.1
   permission_handler: ^12.0.0+1
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
