--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_local_notifications: ^19.2.1
   permission_handler: ^12.0.0+1
   get_it: ^8.0.3
+  device_info_plus: ^11.5.0
+  firebase_remote_config: ^5.5.0
 
 dev_dependencies:
   flutter_test:
